--- a/网站变现思路.md
+++ b/网站变现思路.md
@@ -1,1 +1,49 @@
+## 赚钱方式
+广告，订阅
+
+## 如何赚到1美刀
+广告变现
+
+![image](https://github.com/user-attachments/assets/1fa0aab5-6be1-49c2-b546-352cdecd2254)
+
+每千次访问多少钱
+不同地区有所同
+### 实例
+2024年10月13日注册域名，10月30日上线网站。陆续发了38个博客外链。
+
+![image](https://github.com/user-attachments/assets/0a078c25-2aa6-44cc-83cf-c60a76d56638)
+![image](https://github.com/user-attachments/assets/d68b2718-8eea-4492-a71b-cfd05a261d11)
+![image](https://github.com/user-attachments/assets/9359c2cf-46fc-409e-aaa6-c6f815414ffd)
+
+11月6日才添加统计代码。1月3日申请AdSense，一月5日通过。【AdSense的申请并不难，关键需要把网站做的像一个网站】
+截止1月9日收入突破1美元
+
+![image](https://github.com/user-attachments/assets/584802bd-0ea0-439d-af50-78e2e9b0b70e)
+![image](https://github.com/user-attachments/assets/344f75e1-33d0-473e-96d3-0250c9f9aac4)
+
+数据：截止六月份 总访问量10kUV 24PV。累计25美金。
+【注意：这个网站存在的问题，只把广告代码放在了首页】
+
+![image](https://github.com/user-attachments/assets/01a17845-cbba-417c-870e-ab20d37f2c61)
+![image](https://github.com/user-attachments/assets/48604265-1c7b-401b-ade8-c65962761ae9)
+![image](https://github.com/user-attachments/assets/2be9f94c-84e7-420b-ba2c-81fde0d64fbf)
+
+## 一定要多动手实践
+
+![image](https://github.com/user-attachments/assets/e4543232-2baa-43a0-8558-a8a4c5432fb5)
+
+## 怎样赚到1000美刀【新手村门槛】
+广告变现
+
+![image](https://github.com/user-attachments/assets/7518ec25-3a54-4964-8860-4a07b39fe845)
+![image](https://github.com/user-attachments/assets/df92c438-00d2-406e-9a65-2feac6751270)
+![image](https://github.com/user-attachments/assets/18af095e-8795-46d4-a638-932c22e462da)
+
+
+
+
+
+
+
+
 
