--- a/网站变现思路.md
+++ b/网站变现思路.md
@@ -38,12 +38,23 @@
 ![image](https://github.com/user-attachments/assets/7518ec25-3a54-4964-8860-4a07b39fe845)
 ![image](https://github.com/user-attachments/assets/df92c438-00d2-406e-9a65-2feac6751270)
 ![image](https://github.com/user-attachments/assets/18af095e-8795-46d4-a638-932c22e462da)
+![image](https://github.com/user-attachments/assets/48b54c74-866a-42e3-8777-06b174b089de)
 
+### 实例
+2024年12月5日注册，11日AdSense审核通过
 
+![image](https://github.com/user-attachments/assets/164e9c0b-325e-4dbc-9a49-b0fc46232c83)
 
+数据：截止1月31日。共计1102美刀
 
+![image](https://github.com/user-attachments/assets/6eb88ff3-f882-4a06-ad91-57d45521ff05)
+![image](https://github.com/user-attachments/assets/4442c196-2db5-46a8-a5a0-3f261e335cd0)
+![image](https://github.com/user-attachments/assets/cbb86d41-d405-4812-a2a3-7ac9a979f44d)
+![image](https://github.com/user-attachments/assets/e463ae51-c582-417c-84fd-1a5174cc47de)
 
+做关键词的时候不能只看核心关键词，也要看其他的变体关键词。
 
+![image](https://github.com/user-attachments/assets/1bb952eb-a4d7-45a5-b960-00625c74d924)
 
 
 
